--- a/views/sale_report_saleorder_document_template.xml
+++ b/views/sale_report_saleorder_document_template.xml
@@ -1,143 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <template id="sale.report_saleorder_document_inherit" inherit_id="sale.report_saleorder_document">
-        <xpath expr="//div[@class='page']" position="attributes">
-            <attribute name="style">font-family: Arimo; font-size: 11px;</attribute>
-        </xpath>        
-        <xpath expr="//h2" position="replace"/>        
-        <xpath expr="//div[@class='page']//div[1]" position="before">
-            <h2>
-                <t t-if="not (env.context.get('proforma', False) or is_pro_forma)">
-                    <span t-if="doc.state not in ['draft','sent']">Order # </span>
-                    <span t-if="doc.state in ['draft','sent']">Quotation # </span>
-                </t>
-                <t t-if="env.context.get('proforma', False) or is_pro_forma">
-                    <span>Pro-Forma Invoice # </span>
-                </t>
-                <span t-field="doc.name"/>
-            </h2>
-        </xpath>
-        
-        <xpath expr="//div[@class='page']//div[2]" position="replace">
-            <div class="col-xs-4">
-                <t t-if="doc.state in ['draft','sent']">
-                    <strong>Customer:</strong>
-                    <div t-field="doc.partner_id" t-options="{&quot;widget&quot;: &quot;contact&quot;, &quot;fields&quot;: [&quot;address&quot;, &quot;name&quot;, &quot;phone&quot;, &quot;email&quot;], &quot;no_marker&quot;: True, &quot;phone_icons&quot;: True}"/>
-                </t>
-                <t t-if="doc.state not in ['draft','sent']">
-                    <t t-if="doc.partner_shipping_id == doc.partner_invoice_id                              and doc.partner_invoice_id != doc.partner_id                              or doc.partner_shipping_id != doc.partner_invoice_id">
-                        <strong t-if="doc.partner_shipping_id == doc.partner_invoice_id">Invoicing and Shipping Address:</strong>
-                        <strong t-if="doc.partner_shipping_id != doc.partner_invoice_id">Invoicing Address:</strong>
-                        <div t-field="doc.partner_invoice_id" t-options="{&quot;widget&quot;: &quot;contact&quot;, &quot;fields&quot;: [&quot;address&quot;, &quot;name&quot;, &quot;phone&quot;], &quot;no_marker&quot;: True, &quot;phone_icons&quot;: True}"/>
-                    </t>
-                </t>
-            </div>
-            <div class="col-xs-3">
-                <t t-if="doc.partner_shipping_id == doc.partner_invoice_id                              and doc.partner_invoice_id != doc.partner_id                              or doc.partner_shipping_id != doc.partner_invoice_id">
-                    <div t-if="doc.partner_shipping_id != doc.partner_invoice_id">
-                        <strong>Shipping Address:</strong>
-                        <div t-field="doc.partner_shipping_id" t-options="{&quot;widget&quot;: &quot;contact&quot;, &quot;fields&quot;: [&quot;address&quot;, &quot;name&quot;, &quot;phone&quot;], &quot;no_marker&quot;: True, &quot;phone_icons&quot;: True}"/>
-                    </div>
-                </t>
-            </div>
-            <div class="col-xs-5">
-                <div class="row">
-                    <div class="col-xs-6 text-right">
-                        <strong>Your Contact:</strong>
-                    </div>
-                    <div class="col-xs-6">
-                        <div t-field="doc.user_id" t-options="{                           &quot;widget&quot;: &quot;contact&quot;,                           &quot;fields&quot;: [&quot;name&quot;, &quot;phone&quot;, &quot;email&quot;]                           }"/>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-6 text-right">
-                        <strong>Quote Date:</strong>
-                    </div>
-                    <div class="col-xs-6">
-                        <span t-field="doc.date_order"/>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-6 text-right">
-                        <strong>Expiration Date:</strong>
-                    </div>
-                    <div class="col-xs-6">
-                        <span t-field="doc.validity_date"/>
-                    </div>
-                </div>
-                <div t-if="doc.client_order_ref" class="row">
-                    <div class="col-xs-6 text-right">
-                        <strong>Your Reference:</strong>
-                    </div>
-                    <div class="col-xs-6">
-                        <span t-field="doc.client_order_ref"/>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-6 text-right">
-                        <strong>Incoterms:</strong>
-                    </div>
-                    <div class="col-xs-6">
-                        <span t-field="doc.incoterm.code"/>
-                        <span t-field="doc.delivery_points"/><span t-if="doc.use_incoterms_note"><sup>*</sup></span>
-                    </div>
-                </div>
-                <t t-if="doc.carrier_id">
-                    <div class="row">
-                        <div class="col-xs-6 text-right">
-                            <strong>Delivery Method:</strong>
-                        </div>
-                        <div class="col-xs-6">
-                            <span t-field="doc.carrier_id"/>
-                        </div>
-                    </div>
-                </t>
-                <div t-if="doc.lead_time" class="row">
-                    <div class="col-xs-6 text-right">
-                        <strong>Lead Time:</strong>
-                    </div>
-                    <div class="col-xs-6">
-                        <span t-field="doc.lead_time"/> days<span t-if="doc.use_leadtime_note"><sup>*</sup></span>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-6 text-right">
-                        <strong>Payment Terms:</strong>
-                    </div>
-                    <div class="col-xs-6">
-                        <span t-field="doc.payment_term_id"/><span t-if="doc.use_payment_note"><sup>*</sup></span>
-                    </div>
-                </div>
-            </div>
-            <div class="clearfix"/>
-        </xpath>        
-        <xpath expr="//div[@id='informations']" position="replace"/>
-
-        <xpath expr="//p[@t-field='doc.note']" position="before">
-            <t t-if="doc.use_payment_note or doc.use_leadtime_note or doc.use_incoterms_note or doc.use_other_note">
-                <h2>Remarks</h2>
-                <t t-if="doc.use_payment_note">
-                    <p><span>* </span><span t-field="doc.payment_note"/></p>
-                </t>
-                <t t-if="doc.use_leadtime_note">
-                    <p><span>* </span><span t-field="doc.leadtime_note"/></p>
-                </t>
-                <t t-if="doc.use_incoterms_note">
-                    <p><span>* </span><span t-field="doc.incoterms_note"/></p>
-                </t>
-                <t t-if="doc.use_other_note">
-                    <p><span t-field="doc.other_note"/></p>
-                </t>
-            </t>
-        </xpath>
-    
-        <xpath expr="//p[@t-field='doc.note']" position="replace">
-            <t t-if="doc.note">
-                <p style="page-break-before:always;"/>
-                <h2>Terms &amp; Conditions</h2>
-                <p t-field="doc.note"/>
-            </t>
-        </xpath>     
-        <xpath expr="//p[@t-if='doc.payment_term_id.note']" position="replace"/>
+		<xpath expr="//t[@t-set='address']" position="before">
+			<strong t-if="doc.state in ['draft','sent']">Customer:</strong>
+		</xpath>
+        <xpath expr="//t/t[3]" position="replace"/>
     </template>
 </odoo>
