--- a/views/sale_stock.xml
+++ b/views/sale_stock.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <template id="view_order_form_inherit_sale_stock" inherit_id="sale_stock.view_order_form_inherit_sale_stock">
-            <xpath expr="//field[@name='incoterm']" position="replace"/>
-        </template>
+		<record id="view_order_form_inherit_sale_stock" model="ir.ui.view">
+			<field name="name">sale.order.form.sale.stock</field>
+            <field name="model">sale.order</field>
+            <field name="inherit_id" ref="sale.view_order_form_inherit_sale_stock"/>
+            <field name="arch" type="xml">
+				<xpath expr="//field[@name='incoterm']" position="replace"/>
+			</field>
+		</record>
     </data>
 </odoo>
