--- a/views/sale_views.xml
+++ b/views/sale_views.xml
@@ -8,6 +8,10 @@
             <xpath expr="//field[@name='validity_date']" position="before">
                 <field name="incoterm" widget="selection"/>
             </xpath>
+            <xpath expr="//field[@name='client_order_ref']" position="replace"/>
+            <xpath expr="//field[@name='partner_id']" position="before">
+                <field name="client_order_ref"/>
+            </xpath>
         </field>
     </record>
 </odoo>
