--- a/views/sale_views.xml
+++ b/views/sale_views.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <record  model="ir.ui.view" id="sale_order_view_form">
-        <field name="name">sale.order.form</field>
-        <field name="model">sale.order</field>
-        <field name="inherit_id" ref="sale.view_order_form"/>
-        <field name="arch" type="xml">
-            <xpath expr="//field[@name='client_order_ref']" position="replace"/>
-            <xpath expr="//field[@name='partner_id']" position="before">
-                <field name="client_order_ref"/>
-            </xpath>
-        </field>
-    </record>
+    <data>
+        <record  model="ir.ui.view" id="sale_order_view_form">
+            <field name="name">sale.order.form</field>
+            <field name="model">sale.order</field>
+            <field name="inherit_id" ref="sale.view_order_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='validity_date']" position="before">
+                    <field name="incoterm" widget="selection"/>
+                </xpath>
+                <xpath expr="//field[@name='client_order_ref']" position="replace"/>
+                <xpath expr="//field[@name='partner_id']" position="before">
+                    <field name="client_order_ref"/>
+                </xpath>
+            </field>
+        </record>
+    </data>
 </odoo>
