--- a/views/sale_views.xml
+++ b/views/sale_views.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <record  model="ir.ui.view" id="sale_order_view_form">
+        <record  model="ir.ui.view" id="sale_order_view_form_inherit">
             <field name="name">sale.order.form</field>
             <field name="model">sale.order</field>
             <field name="inherit_id" ref="sale.view_order_form"/>
