--- a/views/sale_views.xml
+++ b/views/sale_views.xml
@@ -2,7 +2,7 @@
 <odoo>
     <data>
         <record  model="ir.ui.view" id="sale_order_view_form_inherit">
-            <field name="name">sale.order.form</field>
+            <field name="name">sale.order.form.inherit</field>
             <field name="model">sale.order</field>
             <field name="inherit_id" ref="sale.view_order_form"/>
             <field name="arch" type="xml">
