--- a/views/sale_views.xml
+++ b/views/sale_views.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <record  model="ir.ui.view" id="sale_order_view_form_inherit">
-            <field name="name">sale.order.form.inherit</field>
+        <record  model="ir.ui.view" id="sale_order_view_form_inherit_stock">
+            <field name="name">sale.order.form.inherit.stock</field>
             <field name="model">sale.order</field>
             <field name="inherit_id" ref="sale.view_order_form"/>
             <field name="arch" type="xml">
