--- a/views/sale_views.xml
+++ b/views/sale_views.xml
@@ -2,7 +2,7 @@
 <odoo>
     <data>
         <record id="view_order_form_inherit_sale_stock" model="ir.ui.view">
-            <field name="name">sale.order.form.sale.stock</field>
+            <field name="name">sale.order.form</field>
             <field name="model">sale.order</field>
             <field name="inherit_id" ref="sale.view_order_form"/>
             <field name="arch" type="xml">
