--- a/views/sale_views.xml
+++ b/views/sale_views.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <odoo>
     <data>
         <record id="view_order_form_inherit_sale_stock" model="ir.ui.view">
@@ -6,10 +6,10 @@
             <field name="model">sale.order</field>
             <field name="inherit_id" ref="sale.view_order_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='partner_id']" position="before">
+                <xpath expr="//group/group/field[@name='partner_id']" position="before">
                     <field name="client_order_ref"/>
                 </xpath>
-            </field>
+           </field>
         </record>
     </data>
 </odoo>
