--- a/views/sale_views.xml
+++ b/views/sale_views.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0"?>
 <odoo>
-    <record id="view_order_form_inherit_sale_stock" model="ir.ui.view">
-        <field name="name">sale.order.form</field>
-        <field name="model">sale.order</field>
-        <field name="inherit_id" ref="sale.view_order_form"/>
-        <field name="arch" type="xml">
-            <xpath expr="//group/group/field[@name='partner_id']" position="before">
-                <field name="client_order_ref"/>
-            </xpath>
-       </field>
-    </record>
+    <data>
+        <record id="view_order_form_inherit_sale_stock" model="ir.ui.view">
+            <field name="name">sale.order.form</field>
+            <field name="model">sale.order</field>
+            <field name="inherit_id" ref="sale.view_order_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//group/group/field[@name='partner_id']" position="before">
+                    <field name="client_order_ref"/>
+                </xpath>
+            </field>
+        </record>
+    </data>
 </odoo>
