--- a/views/sale_stock.xml
+++ b/views/sale_stock.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0"?>
 <odoo>
-    <record id="view_order_form_inherit_sale_stock" model="ir.ui.view">
-        <field name="name">sale.order.form.sale.stock</field>
-        <field name="model">sale.order</field>
-        <field name="inherit_id" ref="sale.vview_order_form_inherit_sale_stock"/>
-        <field name="arch" type="xml">
-
-       </field>
-    </record>
+    <data>
+        <record id="view_order_form_inherit_sale_stock" model="ir.ui.view">
+            <field name="name">sale.order.form.sale.stock</field>
+            <field name="model">sale.order</field>
+            <field name="inherit_id" ref="sale.vview_order_form_inherit_sale_stock"/>
+            <field name="arch" type="xml">
+            </field>
+        </record>
+    </data>
 </odoo>
