--- a/views/sale_views.xml
+++ b/views/sale_views.xml
@@ -6,9 +6,9 @@
             <field name="model">sale.order</field>
             <field name="inherit_id" ref="sale.view_order_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//group/group/field[@name='partner_id']" position="before">
+                <field name="partner_id" position="before">
                     <field name="client_order_ref"/>
-                </xpath>
+                </field>
             </field>
         </record>
     </data>
