--- a/views/sale_views.xml
+++ b/views/sale_views.xml
@@ -6,12 +6,14 @@
             <field name="model">sale.order</field>
             <field name="inherit_id" ref="sale.view_order_form"/>
             <field name="arch" type="xml">
-                <field name="partner_id" position="before">
-                    <field name="client_order_ref"/>
-                </field>
-                <field name="validity_date" position="before">
-                    <field name="incoterm"/>
-                </field>
+                <data>
+                    <field name="partner_id" position="before">
+                        <field name="client_order_ref"/>
+                    </field>
+                    <field name="validity_date" position="before">
+                        <field name="incoterm"/>
+                    </field>
+                </data>
             </field>
         </record>
     </data>
