--- a/views/sale_views.xml
+++ b/views/sale_views.xml
@@ -11,6 +11,10 @@
                     <field name="partner_id" position="before">
                         <field name="client_order_ref"/>
                     </field>
+                    <field name="user_id" position="replace"/>
+                    <field name="validity_date" position="before">
+                        <field name="user_id"/>
+                    </field>
                 </data>
             </field>
         </record>
