--- a/report/sale_report_template.xml
+++ b/report/sale_report_template.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-
+    <template id="report_saleorder_document" inherit_id="sale.report_saleorder_document">
+        <xpath expr="//t//t[@t-set='address']" position="before">
+            <strong>Customer:</strong>
+        </xpath>
+    </template>
 </odoo>
