--- a/report/sale_report_template.xml
+++ b/report/sale_report_template.xml
@@ -4,5 +4,6 @@
         <xpath expr="//t//t[@t-set='address']" position="before">
             <strong>Customer:</strong>
         </xpath>
+        <xpath expr="//t/t[3]" position="replace"/>
     </template>
 </odoo>
