--- a/report/sale_report_template.xml
+++ b/report/sale_report_template.xml
@@ -2,7 +2,7 @@
 <odoo>
     <template id="report_saleorder_document" inherit_id="sale.report_saleorder_document">
         <xpath expr="//t//t[@t-set='address']" position="attributes">
-            <attribute name="t-set">information_block</strong>
+            <attribute name="t-set">information_block</attribute>
         </xpath>        
         <xpath expr="//t//t[2]/div" position="before">
             <strong>Customer:</strong>
