--- a/report/sale_report_template.xml
+++ b/report/sale_report_template.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <template id="report_saleorder_document" inherit_id="sale.report_saleorder_document">
-        <xpath expr="//t/t[2]" position="attributes">
-            <attribute name="t-set"/>
-        </xpath>        
-        <xpath expr="//t/t[2]/div" position="before">
-            <strong>Customer:</strong>
-        </xpath>
+        <xpath expr="//t/t[2]" position="replace"/>     
         <xpath expr="//t/t[3]" position="replace"/>
+        <xpath expr="//h2" position="after">
+            <t>
+                <strong>Customer:</strong>
+                <div t-field="doc.partner_id"
+                     t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": True}' />
+                <p t-if="doc.partner_id.vat"><t t-esc="doc.company_id.country_id.vat_label or 'Tax ID'"/>: <span t-field="doc.partner_id.vat"/></p>
+            </t>
+        </xpath>
     </template>
 </odoo>
