--- a/report/sale_report_template.xml
+++ b/report/sale_report_template.xml
@@ -4,12 +4,13 @@
         <xpath expr="//t/t[2]" position="replace"/>     
         <xpath expr="//t/t[3]" position="replace"/>
         <xpath expr="//h2" position="after">
-            <t>
-                <strong>Customer:</strong>
-                <div t-field="doc.partner_id"
-                     t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": True}' />
-                <p t-if="doc.partner_id.vat"><t t-esc="doc.company_id.country_id.vat_label or 'Tax ID'"/>: <span t-field="doc.partner_id.vat"/></p>
-            </t>
+            <div class="row mt32 mb32">
+                <div class="col-auto mw-100 mb-2">
+                    <strong>Customer:</strong>
+                    <p class="m-0" t-field="doc.partner_id"
+                       t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": True}' />
+                </div>
+            </div>
         </xpath>
     </template>
 </odoo>
