--- a/report/sale_report_template.xml
+++ b/report/sale_report_template.xml
@@ -8,7 +8,15 @@
                 <div class="col-md-4">
                     <strong>Customer:</strong>
                     <p class="m-0" t-field="doc.partner_id"
-                       t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": True}' />
+                       t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}' />
+                </div>
+                <div class="col-md-4">
+                    <strong>Invoicing Address:</strong>
+                    <p t-field="doc.partner_invoice_id"
+                       t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
+                </div>
+                <div class="col-md-4">
+                    
                 </div>
             </div>
         </xpath>
