--- a/report/sale_report_template.xml
+++ b/report/sale_report_template.xml
@@ -3,20 +3,20 @@
     <template id="report_saleorder_document" inherit_id="sale.report_saleorder_document">
         <xpath expr="//t/t[2]" position="replace"/>     
         <xpath expr="//t/t[3]" position="replace"/>
-        <xpath expr="//div[@id='information']" position="replace"/>
+        <xpath expr="//div[@id='informations']" position="replace"/>
         <xpath expr="//h2" position="after">
             <div class="row mt32 mb32">
-                <div class="col-md-4">
+                <div class="col-lg-4">
                     <strong>Customer:</strong>
                     <p class="m-0" t-field="doc.partner_id"
                        t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}' />
                 </div>
-                <div class="col-md-4">
+                <div class="col-lg-4">
                     <strong>Invoicing Address:</strong>
                     <p t-field="doc.partner_invoice_id"
                        t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
                 </div>
-                <div class="col-md-4" id="information">
+                <div class="col-lg-4" id="informations">
                     <!--<div class="col-xs-5">
                         <strong>Your Contact:</strong>
                     </div>
