--- a/report/sale_report_template.xml
+++ b/report/sale_report_template.xml
@@ -6,21 +6,21 @@
         <xpath expr="//div[@id='informations']" position="replace"/>
         <xpath expr="//h2" position="after">
             <div class="row mt32 mb32">
-                <div class="col-md">
+                <div class="col-md-3">
                     <strong>Customer:</strong>
                     <p class="m-0" t-field="doc.partner_id"
                        t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}' />
                 </div>
-                <div class="col-md">
+                <div class="col-md-3">
                     <strong>Invoicing Address:</strong>
                     <p class="m-0" t-field="doc.partner_invoice_id"
                        t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
                 </div>
-                <div class="col-md" id="informations">
-                    <!--<div class="col-xs-5">
+                <div class="col-md-6" id="informations">
+                    <div class="col-md-2">
                         <strong>Your Contact:</strong>
                     </div>
-                    <div class="col-xs-7">
+                    <div class="col-md-4">
                         <div t-field="doc.user_id" 
                              t-options="{&quot;widget&quot;: &quot;contact&quot;,&quot;fields&quot;: [&quot;name&quot;, &quot;phone&quot;, &quot;email&quot;]}"/>
                     </div>-->
