--- a/report/sale_report_template.xml
+++ b/report/sale_report_template.xml
@@ -6,15 +6,23 @@
         <xpath expr="//div[@id='informations']" position="replace"/>
         <xpath expr="//h2" position="after">
             <div class="row mt32 mb32">
-                <div class="col-xs-3">
+                <div class="col-xs-4">
                     <strong>Customer:</strong>
                     <p class="m-0" t-field="doc.partner_id"
                        t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
                 </div>
-                <div class="col-xs-3">
+                <div class="col-xs-4">
                     <strong>Invoicing Address:</strong>
                     <p class="m-0" t-field="doc.partner_invoice_id"
                        t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
+                </div>
+                <div class="col-xs-4" id="informations">
+                    <div class="col-xs-2">
+                        <strong>Sales Rep.:</strong>                
+                    </div>
+                    <div class="col-xs-2">
+                        <p class="m-0" t-field="doc.user_id"/>
+                    </div>
                 </div>
             </div>
         </xpath>
