--- a/report/sale_report_template.xml
+++ b/report/sale_report_template.xml
@@ -55,5 +55,8 @@
                 </div>
             </div>
         </xpath>
+        <xpath expr="//table" position="attributes">
+            <attribute name="style">font-size: 12px;</attribute>
+        </xpath>
     </template>
 </odoo>
