--- a/report/sale_report_template.xml
+++ b/report/sale_report_template.xml
@@ -18,37 +18,37 @@
                 </div>
                 <div class="col-4" id="informations">
                     <div class="row">
-                        <div class="col-6">
+                        <div>
                             <strong>Sales Rep.:</strong>                
                         </div>
-                        <div class="col-6">
+                        <div>
                             <p class="m-0" t-field="doc.user_id"/>
                         </div>
-                        <div t-if="doc.date_order and doc.state in ['draft','sent']" class="col-6" >
+                        <div t-if="doc.date_order and doc.state in ['draft','sent']">
                             <strong>Quote Date:</strong>
                         </div>
-                        <div t-if="doc.confirmation_date and doc.state not in ['draft','sent']" class="col-6">
+                        <div t-if="doc.confirmation_date and doc.state not in ['draft','sent']">
                             <strong>Date Ordered:</strong>
                         </div>
-                        <div class="col-6">
+                        <div>
                             <p class="m-0" t-field="doc.confirmation_date"/>
                         </div>
-                        <div class="col-6" t-if="doc.validity_date and doc.state in ['draft', 'sent']" >
+                        <div t-if="doc.validity_date and doc.state in ['draft', 'sent']" >
                             <strong>Expiry Date:</strong>                
                         </div>
-                        <div class="col-6">
+                        <div>
                             <p class="m-0" t-field="doc.validity_date"/>
                         </div>
-                        <div class="col-6">
+                        <div>
                             <strong>Your Ref.:</strong>                
                         </div>
-                        <div class="col-6">
+                        <div>
                             <p class="m-0" t-field="doc.user_id"/>
                         </div>
-                        <div class="col-6">
+                        <div>
                             <strong>Payment Terms:</strong>                
                         </div>
-                        <div class="col-6">
+                        <div>
                             <p class="m-0" t-field="doc.payment_term_id"/>
                         </div>
                     </div>
