--- a/report/sale_report_template.xml
+++ b/report/sale_report_template.xml
@@ -6,28 +6,28 @@
         <xpath expr="//div[@id='informations']" position="replace"/>
         <xpath expr="//h2" position="after">
             <div class="row mt32 mb32" style="font-size: 12px;">
-                <div class="col-4">
+                <div class="m-0" style="width: 30%;">
                     <strong>Customer:</strong>
                     <p class="m-0" t-field="doc.partner_id"
                        t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
                 </div>
-                <div class="col-4">
+                <div class="m-0" style="width: 30%;">
                     <strong>Invoicing Address:</strong>
                     <p class="m-0" t-field="doc.partner_invoice_id"
                        t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
                 </div>
-                <div class="col-4" id="informations">
+                <div class="m-0" id="informations" style="width: 40%;">
                     <div class="row">
-                        <div>
+                        <div style="width: 40%;">
                             <strong>Sales Rep.:</strong>                
                         </div>
-                        <div>
+                        <div style="width: 60%;">
                             <p class="m-0" t-field="doc.user_id"/>
                         </div>
-                        <div t-if="doc.date_order and doc.state in ['draft','sent']">
+                        <div t-if="doc.date_order and doc.state in ['draft','sent']" style="width: 40%;">
                             <strong>Quote Date:</strong>
                         </div>
-                        <div t-if="doc.confirmation_date and doc.state not in ['draft','sent']">
+                        <div t-if="doc.confirmation_date and doc.state not in ['draft','sent']" style="width: 60%">
                             <strong>Date Ordered:</strong>
                         </div>
                         <div>
