--- a/report/sale_report_template.xml
+++ b/report/sale_report_template.xml
@@ -17,7 +17,7 @@
                        t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
                 </div>
                 <div class="m-0" id="informations" style="width: 40%;">
-                    <div class="row">
+                    <div class="row mt32 mb32">
                         <div style="width: 40%;">
                             <strong>Sales Rep.:</strong>                
                         </div>
