--- a/report/sale_report_template.xml
+++ b/report/sale_report_template.xml
@@ -17,7 +17,7 @@
                        t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
                 </div>
                 <div class="m-0" id="informations" style="width: 40%;">
-                    <div class="row mt32 mb32">
+                    <!--<div class="row mt32 mb32">
                         <div style="width: 40%;">
                             <strong>Sales Rep.:</strong>                
                         </div>
@@ -51,7 +51,7 @@
                         <div>
                             <p class="m-0" t-field="doc.payment_term_id"/>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </xpath>
