--- a/report/sale_report_template.xml
+++ b/report/sale_report_template.xml
@@ -17,13 +17,15 @@
                        t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
                 </div>
                 <div class="m-0" id="informations" style="width: 40%;">
-                    <!--<div class="row mt32 mb32">
+                    <div class="row justify-content-end">
                         <div style="width: 40%;">
                             <strong>Sales Rep.:</strong>                
                         </div>
                         <div style="width: 60%;">
                             <p class="m-0" t-field="doc.user_id"/>
                         </div>
+                    </div>
+                    <div class="row justify-content-end">
                         <div t-if="doc.date_order and doc.state in ['draft','sent']" style="width: 40%;">
                             <strong>Quote Date:</strong>
                         </div>
@@ -33,25 +35,31 @@
                         <div>
                             <p class="m-0" t-field="doc.confirmation_date"/>
                         </div>
+                    </div>
+                    <div class="row justify-content-end">
                         <div t-if="doc.validity_date and doc.state in ['draft', 'sent']" >
                             <strong>Expiry Date:</strong>                
                         </div>
                         <div>
                             <p class="m-0" t-field="doc.validity_date"/>
                         </div>
+                    </div>
+                    <div t-if="doc.client_order_ref" class="row justify-content-end">
                         <div>
                             <strong>Your Ref.:</strong>                
                         </div>
                         <div>
-                            <p class="m-0" t-field="doc.user_id"/>
+                            <p class="m-0" t-field="doc.client_order_ref"/>
                         </div>
+                    </div>
+                    <div class="row justify-content-end">
                         <div>
                             <strong>Payment Terms:</strong>                
                         </div>
                         <div>
                             <p class="m-0" t-field="doc.payment_term_id"/>
                         </div>
-                    </div>-->
+                    </div>
                 </div>
             </div>
         </xpath>
