--- a/report/sale_report_template.xml
+++ b/report/sale_report_template.xml
@@ -18,18 +18,23 @@
                 </div>
                 <div class="m-0" id="informations" style="width: 40%;">
                     <div class="row">
-                        <div style="width: 40%;">
+                        <div style="width: 30%;">
                             <strong>Sales Rep.:</strong>                
                         </div>
-                        <div style="width: 60%;">
+                        <div>
                             <p class="m-0" t-field="doc.user_id"/>
                         </div>
                     </div>
-                    <div class="row">
-                        <div t-if="doc.date_order and doc.state in ['draft','sent']" style="width: 40%;">
+                    <div class="row" t-if="doc.date_order and doc.state in ['draft','sent']">
+                        <div style="width: 30%;">
                             <strong>Quote Date:</strong>
                         </div>
-                        <div t-if="doc.confirmation_date and doc.state not in ['draft','sent']" style="width: 60%">
+                        <div>
+                            <p class="m-0" t-field="doc.date_order"/>
+                        </div>
+                    </div>
+                    <div class="row" t-if="doc.confirmation_date and doc.state not in ['draft','sent']">
+                        <div style="width: 30%;">
                             <strong>Date Ordered:</strong>
                         </div>
                         <div>
@@ -37,7 +42,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div t-if="doc.validity_date and doc.state in ['draft', 'sent']" >
+                        <div style="width: 30%;" t-if="doc.validity_date and doc.state in ['draft', 'sent']" >
                             <strong>Expiry Date:</strong>                
                         </div>
                         <div>
@@ -45,7 +50,7 @@
                         </div>
                     </div>
                     <div class="row" t-if="doc.client_order_ref">
-                        <div>
+                        <div style="width: 30%;">
                             <strong>Your Ref.:</strong>                
                         </div>
                         <div>
@@ -53,7 +58,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div>
+                        <div style="width: 30%;">
                             <strong>Payment Terms:</strong>                
                         </div>
                         <div>
