--- a/report/sale_report_template.xml
+++ b/report/sale_report_template.xml
@@ -5,7 +5,7 @@
         <xpath expr="//t/t[3]" position="replace"/>
         <xpath expr="//div[@id='informations']" position="replace"/>
         <xpath expr="//h2" position="after">
-            <div class="row mt32 mb32" style="font-size: 12px;">
+            <div class="row mt32 mb32">
                 <div class="m-0" style="width: 30%;">
                     <strong>Customer:</strong>
                     <p class="m-0" t-field="doc.partner_id"
@@ -67,9 +67,6 @@
                     </div>
                 </div>
             </div>
-        </xpath>
-        <xpath expr="//table" position="attributes">
-            <attribute name="style">font-size: 12px;</attribute>
         </xpath>
     </template>
 </odoo>
