--- a/report/sale_report_template.xml
+++ b/report/sale_report_template.xml
@@ -19,7 +19,7 @@
                     <p class="m-0" t-field="doc.partner_invoice_id"
                        t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
                 </div>
-                <div class="m-0" id="informations">
+                <div class="m-0" id="informations" style="width: 50%;">
                     <div class="row">
                         <div style="width: 30%;">
                             <strong>Sales Rep.:</strong>                
