--- a/report/sale_report_template.xml
+++ b/report/sale_report_template.xml
@@ -10,17 +10,17 @@
         </xpath>
         <xpath expr="//h2" position="after">
             <div class="row mt32 mb32">
-                <div class="m-0" style="width: 30%;">
+                <div class="col-4">
                     <strong>Customer:</strong>
                     <p class="m-0" t-field="doc.partner_id"
                        t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
                 </div>
-                <div class="m-0" style="width: 30%;">
+                <div class="col-4">
                     <strong>Invoicing Address:</strong>
                     <p class="m-0" t-field="doc.partner_invoice_id"
                        t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
                 </div>
-                <div class="m-0" id="informations" style="width: 40%;">
+                <div class="col-4" id="informations">
                     <div class="row">
                         <div style="width: 30%;">
                             <strong>Sales Rep.:</strong>                
